File: components/nexus-core/src/main/java/org/sonatype/nexus/internal/script/groovy/GroovyScriptEngineFactory.java